whatsapp mobile fixed

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 				<li class="contacts-connect-telegram">
 					<a href="https://t.me/indigo1974">
 						<i class="fa fa-telegram" aria-hidden="true"></i>
-						<span>+905510508044</span>
+						<span>@indigo1974</span>
 					</a>					
 				</li>
 				<li class="contacts-connect-skype">
