--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
 					<span>goodInc</span>
 				</figure>
 			</a>
-			<a href="FreePSD/index.html">
+			<a href="Elegant/index.html">
 				<figure>
-					<img src="img/freepsd.jpg" alt="freepsd adaptive">
-					<figcaption>freePSD</figcaption>
-					<span>freePSD</span>
+					<img src="img/elegant.jpg" alt="elegant adaptive">
+					<figcaption>Elegant</figcaption>
+					<span>Elegant</span>
 				</figure>
 			</a>
 			<a href="prides/index.html">
