--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
 		<div class="header-logo">
 			<div class="header-logo-content">
 				<div class="header-lefttri"></div>
-				<!--<i class="fa fa-globe" aria-hidden="true"></i>-->
-				<i class="fa fa-chevron-left" aria-hidden="true"></i>
-				<i class="fa fa-desktop" aria-hidden="true"></i>
-				<i class="fa fa-chevron-right" aria-hidden="true"></i>
+				<!--<i class="fa fa-chevron-left" aria-hidden="true"></i>				<!--<i class="fa fa-desktop" aria-hidden="true"></i>
+				<i class="fa fa-chevron-right" aria-hidden="true"></i>-->
+				<img src="img/logo.png" alt="header-logo">
 				<a href="#">Indigo Web Studio</a>
 			</div>	
 			<div class="header-mobsocial">
