--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
 		<div class="header-logo">
 			<div class="header-logo-content">
 				<div class="header-lefttri"></div>
-				<!--<i class="fa fa-chevron-left" aria-hidden="true"></i>				<!--<i class="fa fa-desktop" aria-hidden="true"></i>
-				<i class="fa fa-chevron-right" aria-hidden="true"></i>-->
 				<img src="img/logo.png" alt="header-logo">
 				<a href="#">Indigo Web Studio</a>
 			</div>	
@@ -163,11 +161,32 @@
 			<a href="Creativia/index.html">
 				<figure>
 					<img src="img/creativia.jpg" 
-					alt="prides markello">
+					alt="creativia">
 					<figcaption>
 						Creativia
 					</figcaption>
 					<span>Creativia</span>
+				</figure>
+			</a>
+			<a href="Dublin/index.html">
+				<figure>
+					<img src="img/dublin.jpg" alt="Dublin">
+					<figcaption>Dublin-Apps</figcaption>
+					<span>Dublin-Apps</span>
+				</figure>
+			</a>
+			<a href="Pinball/index.html">
+				<figure>
+					<img src="img/pinball.jpg" alt="pinball">
+					<figcaption>Pinball</figcaption>
+					<span>Pinball</span>
+				</figure>
+			</a>
+			<a href="FreePSD/index.html">
+				<figure>
+					<img src="img/freepsd.jpg" alt="freepsd">
+					<figcaption>FreePSD</figcaption>
+					<span>FreePSD</span>
 				</figure>
 			</a>			
 		</div>
