two new pojs added

--- a/index.html
+++ b/index.html
@@ -175,14 +175,14 @@
 					<span>Dublin-Apps</span>
 				</figure>
 			</a>
-			<a href="Pinball/index.html">
+			<a href="Pin/index.html">
 				<figure>
 					<img src="img/pinball.jpg" alt="pinball">
 					<figcaption>Pinball</figcaption>
 					<span>Pinball</span>
 				</figure>
 			</a>
-			<a href="FreePSD/index.html">
+			<a href="PSD/index.html">
 				<figure>
 					<img src="img/freepsd.jpg" alt="freepsd">
 					<figcaption>FreePSD</figcaption>
