--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 	<section class="gallery">
 	<h1><span>Моя</span> фотогалерея</h1>
 	<div class="gallery-items">
-		<a class="gallery-items-item" href="">
+		<a class="gallery-items-item" href="https://drive.google.com/file/d/1xcODA4ZlNmpNDQCvhvqnMSUTIqxbje0w/view?usp=sharing">
 			<figure>
 				<img src="img/gallery1.jpg" alt="">
 				<figcaption>
