--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="css/general.css">
+	<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 	<meta name="viewport" content="width=device-width">	
 	<script src="js/jquery-3.2.0.min.js"></script>
 	<script src="js/script.js"></script>
@@ -214,7 +215,7 @@
 				</figcaption>
 			</figure>
 		</a>
-		<a class="gallery-items-item" href="">
+		<a class="gallery-items-item" href="https://drive.google.com/file/d/1-CkhjYXuRfHNgMXvu9R6f6pLR1JcZM8y/view?usp=sharing">
 			<figure>
 				<img src="img/gallery2.jpg" alt="">
 				<figcaption>
