--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
 		<h1><span>Моё</span> портфолио</h1>
 		<h2>Здесь представлены выполненные мной работы. Все они выполнены с применением современных технологий в области верстки и стилизации.</h2>
 		<div class="portfolio-items">
+			<a href="Alef/index.html">
+				<figure>
+					<img src="img/alef.jpg" alt="freepsd">
+					<figcaption>Alef</figcaption>
+				</figure>
+			</a>
 			<a href="goodInc/index.html">
 				<figure>
 					<img src="img/goodinc.jpg" alt="goodInc">
@@ -175,12 +181,7 @@
 					<figcaption>Pinball</figcaption>
 				</figure>
 			</a>
-			<a href="PSD/index.html">
-				<figure>
-					<img src="img/freepsd.jpg" alt="freepsd">
-					<figcaption>FreePSD</figcaption>
-				</figure>
-			</a>			
+						
 		</div>
 	</div>
 	
