--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
 					<figcaption>Alef</figcaption>
 				</figure>
 			</a>
-			<a href="goodInc/index.html">
+			<a href="OnePage/index.html">
 				<figure>
-					<img src="img/goodinc.jpg" alt="goodInc">
-					<figcaption>goodInc</figcaption>
+					<img src="img/Onepage.jpg" alt="goodInc">
+					<figcaption>OnePage</figcaption>
 				</figure>
 			</a>
 			<a href="Elegant/index.html">
