--- a/index.html
+++ b/index.html
@@ -121,6 +121,24 @@
 		<h1><span>Моё</span> портфолио</h1>
 		<h2>Здесь представлены выполненные мной работы. Все они выполнены с применением современных технологий в области верстки и стилизации.</h2>
 		<div class="portfolio-items">
+			<a href="http://c70514p7.beget.tech/">
+				<figure>				
+					<img src="img/indigo.png" alt="freepsd">
+					<figcaption>Интернет-магазин на WordPress</figcaption>
+				</figure>
+			</a>
+			<a href="Pincet/index.html">
+				<figure>
+					<img src="img/pincet.png" alt="goodInc">
+					<figcaption>Pincet</figcaption>
+				</figure>
+			</a>
+			<a href="dnk-git/index.html">
+				<figure>
+					<img src="img/dnk.png" alt="elegant adaptive">
+					<figcaption>ДНК-тест</figcaption>
+				</figure>
+			</a>
 			<a href="Alef/index.html">
 				<figure>
 					<img src="img/alef.jpg" alt="freepsd">
